--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,8 +1,10 @@
 {
 	"extends": "../tsconfig.base.json",
+	"include": [".", "../src/**/*"],
 	"compilerOptions": {
-		"noEmit": true
-	},
-	"include": [".", "../src/**/*", "../tests/unit/utils.ts"],
-	"exclude": ["node_modules"]
+		"noEmit": true,
+		"paths": {
+			"@/*": ["../src/*"]
+		}
+	}
 }
