--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -20,7 +20,7 @@
 	"scripts": {
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
-		"generate": "tsx scripts/prepare",
+		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare",
 		"build": "tsdown"
 	},
 	"dependencies": {
