--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,29 +14,9 @@
 	"dependencies": {
 		"ink": "^4.1.0",
 		"ink-spinner": "^5.0.0",
-		"meow": "^11.0.0",
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.32",
-		"@vdemedes/prettier-config": "^2.0.1",
-		"ava": "^5.2.0",
-		"chalk": "^5.2.0",
-		"ink-testing-library": "^3.0.0",
-		"ts-node": "^10.9.1"
-	},
-	"ava": {
-		"extensions": {
-			"ts": "module",
-			"tsx": "module"
-		},
-		"nodeArguments": ["--loader=ts-node/esm"]
-	},
-	"xo": {
-		"extends": "xo-react",
-		"prettier": true,
-		"rules": {
-			"react/prop-types": "off"
-		}
+		"@types/react": "^18.0.32"
 	}
 }
