--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
 		"monorepo:test": "pnpm --stream -r test"
 	},
 	"dependencies": {
-		"@oldschoolgg/spritesheet": "workspace:*",
 		"@oldschoolgg/collectionlog": "workspace:*",
+		"@oldschoolgg/spritesheet": "workspace:*",
 		"@oldschoolgg/toolkit": "workspace:*",
 		"@prisma/client": "^6.10.1",
 		"@sapphire/ratelimits": "^2.4.9",
@@ -86,7 +86,6 @@
 		"vitest": "^3.2.4",
 		"ws": "^8.18.3"
 	},
-	"packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
 	"pnpm": {
 		"overrides": {
 			"form-data@^2": "2.5.5",
@@ -96,6 +95,8 @@
 			"@babel/runtime": "7.26.10",
 			"tough-cookie": "4.1.3",
 			"vite@^7": "7.0.7"
-		}
-	}
+		},
+		"neverBuiltDependencies": []
+	},
+	"packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
 }
