--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
 		"@sapphire/snowflake": "^3.5.3",
 		"@sapphire/time-utilities": "^1.6.0",
 		"@sapphire/timer-manager": "^1.0.2",
-		"@sentry/node": "^10.10.0",
+		"@sentry/node": "^10.12.0",
 		"bufferutil": "^4.0.9",
 		"discord.js": "^14.20.0",
 		"dotenv": "^16.5.0",
 		"exit-hook": "^4.0.0",
-		"fast-deep-equal": "^3.1.3",
+		"fast-deep-equal": "3.1.3",
 		"lru-cache": "^10.3.0",
 		"luxon": "^3.7.2",
 		"murmurhash": "^2.0.1",
