--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -75,7 +75,7 @@
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
 		"emoji-regex": "10.5.0",
-		"fast-deep-equal": "^3.1.3",
+		"fast-deep-equal": "3.1.3",
 		"math-expression-evaluator": "^1.3.14",
 		"pure-rand": "^6.1.0",
 		"micromatch": "^4.0.8",
