--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"node-cron": "^3.0.3",
 		"node-fetch": "^2.7.0",
 		"oldschooljs": "workspace:*",
-		"p-queue": "^6.6.2",
+		"p-queue": "8.1.1",
 		"piscina": "^5.1.3",
 		"postgres": "^3.4.7",
 		"random-js": "^2.1.0",
