--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,7 @@
 {
 	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
-		"rootDir": "./",
-		"outDir": "../dist",
-		"incremental": false,
-		"paths": {
-			"@/*": ["./*"]
-		}
+		"incremental": false
 	},
 	"include": ["."]
 }
