--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -2,6 +2,9 @@
 	"extends": "../tsconfig.base.json",
 	"include": [".", "../src/**/*"],
 	"compilerOptions": {
-		"noEmit": true
+		"noEmit": true,
+		"paths": {
+			"@/*": ["../src/*"]
+		}
 	}
 }
