--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -25,5 +25,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Run Integration Tests
-        run: docker compose up --build --abort-on-container-exit --remove-orphans && docker compose down --volumes --remove-orphans
+      - name: Start DB and Redis
+        run: docker compose up -d --build db redis
+
+      - name: Run Integration Tests (Parallel Suite)
+        run: docker compose run --rm -e TEST_CONFIG=vitest.integration.config.mts app
+
+      - name: Run Integration Tests (GE Serial Suite)
+        run: docker compose run --rm -e TEST_CONFIG=vitest.integration.ge.config.mts app
+
+      - name: Cleanup
+        if: always()
+        run: docker compose down --volumes --remove-orphans
