--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"test:unit": "vitest run --config vitest.unit.config.mts",
 		"test:docker": "docker compose build && docker compose run --rm app",
 		"test:integration": "pnpm tsx --no-deprecation --env-file=.env.test ./scripts/integration-tests.ts",
+		"test:integration:economy": "pnpm vitest run --config vitest.integration.economy.config.mts",
 		"test:watch": "vitest --config vitest.unit.config.mts --coverage",
 		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
 		"============MISC": "============",
